k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medgenome-api
  namespace: medgenome
  labels:
    app: medgenome-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medgenome-api
  template:
    metadata:
      labels:
        app: medgenome-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: medgenome-api
          image: medgenome-platform:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
