k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medgenome-api
  namespace: medgenome
  labels:
    app: medgenome-api
spec:
  type: ClusterIP
  selector:
    app: medgenome-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
