k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medgenome-api
  namespace: medgenome
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: medgenome.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medgenome-api
                port:
                  number: 80
